force-app/main/default/objects/AssetActivationRegisterSQLite__c/AssetActivationRegisterSQLite__c.object-meta.xml
<CustomObject>
    <description>Imported from SQLite Server all HASP activation</description>
    <label>License Activation</label>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Activations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>