force-app/main/default/objects/AssetActivationRegisterSQLite__c/fields/ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>ActivationDate__c</fullName>
    <label>ActivationDate</label>
    <type>DateTime</type>
</CustomField>