force-app/main/default/objects/AssetActivationRegisterSQLite__c/fields/Asset_Vici__c.field-meta.xml
<CustomField>
    <fullName>Asset_Vici__c</fullName>
    <label>Asset Vici</label>
    <referenceTo>Asset_Vici__c</referenceTo>
    <relationshipLabel>License Activations</relationshipLabel>
    <relationshipName>License_Activations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>