force-app/main/default/objects/AssetActivationRegisterSQLite__c/fields/ContactEMail__c.field-meta.xml
<CustomField>
    <fullName>ContactEMail__c</fullName>
    <label>ContactEMail</label>
    <type>Email</type>
</CustomField>