force-app/main/default/objects/AssetActivationRegisterSQLite__c/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <label>ContactPhone</label>
    <type>Phone</type>
</CustomField>