force-app/main/default/objects/AssetActivationRegisterSQLite__c/fields/CustomerAddress__c.field-meta.xml
<CustomField>
    <fullName>CustomerAddress__c</fullName>
    <label>CustomerAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>