force-app/main/default/objects/AssetActivationRegisterSQLite__c/fields/CustomerEMail__c.field-meta.xml
<CustomField>
    <fullName>CustomerEMail__c</fullName>
    <label>CustomerEMail</label>
    <type>Email</type>
</CustomField>