force-app/main/default/objects/AssetActivationRegisterSQLite__c/fields/DealerName__c.field-meta.xml
<CustomField>
    <fullName>DealerName__c</fullName>
    <label>DealerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>