force-app/main/default/objects/AssetActivationRegisterSQLite__c/fields/MachineSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>MachineSerialNumber__c</fullName>
    <label>MachineSerialNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>