force-app/main/default/objects/AssetActivationRegisterSQLite__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ActivationDate__c</columns>
    <columns>MachineSerialNumber__c</columns>
    <columns>DealerName__c</columns>
    <columns>CustomerName__c</columns>
    <columns>CustomerAddress__c</columns>
    <columns>CustomerEMail__c</columns>
    <columns>CustomerPhone__c</columns>
    <columns>ContactName__c</columns>
    <columns>ContactEMail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>